--- a/config/cdliuserprofile.global.php.dist
+++ b/config/cdliuserprofile.global.php.dist
@@ -1,7 +1,7 @@
 <?php
 return array(
     'cdli-user-profile' => array(
-        'field-settings' => array(
+        'field_settings' => array(
             'zfcuser' => array(
                 'username' => array(
                     'displayed' => false,
